# BOMBERMAN-2026

./: .gitignore  CMakeLists.txt  README  README.md
img/atlases/: SpriteAtlasEnemy.json
include/: ai_config.hpp  audio_manager.hpp  bomb.hpp  bomberman.hpp  cinematic_player.hpp  controls_menu.hpp  cpu_bomberman.hpp  cpu_bomberman_difficulty.hpp  custom_game_menu.hpp  custom_game_mode.hpp  destructible_block.hpp  ejemplo.hpp  enemy.hpp  entity.hpp  game_map.hpp  gamepad_input.hpp  glb_loader.hpp  in_game_menu.hpp  indestructible_block.hpp  menu.hpp  menu_intro.hpp  player.hpp  power_up.hpp  q_learning.hpp  resource_manager.hpp  score_popup.hpp  sprite_atlas.hpp  tile_animator.hpp  versus_mode.hpp
include/enemies/: babosa.hpp  bebe_lloron.hpp  dragon_joven.hpp  dron_bombardero.hpp  fantasma_mortal.hpp  king_bomber.hpp  leon.hpp  sol_pervertido.hpp
levels/: level_01.txt  level_02.txt  level_03.txt  level_04.txt  level_05.txt  level_cg_01.txt  level_cg_02.txt  level_cg_03.txt  level_cg_04.txt  level_cg_05.txt  level_vs_01.txt  level_vs_02.txt  level_vs_03.txt  level_vs_04.txt
models/: README.md
resources/keyBindings/: controls.txt
resources/rankings/: history_ranking.txt  vs_ranking.txt
resources/sprites/atlases/: SpriteAtlasBordesMenu.json  SpriteAtlasCustomGameMenu1.json  SpriteAtlasEnemy.json  SpriteAtlasExplosionObjeto.json  SpriteAtlasHistoryP1.json  SpriteAtlasHistoryP11.json  SpriteAtlasHistoryP2.json  SpriteAtlasHistoryP22.json  SpriteAtlasHistoryP3.json  SpriteAtlasHistoryP4.json  SpriteAtlasIntro.json  SpriteAtlasMenuBomb.json  SpriteAtlasNextLevel.json  SpriteAtlasPlayer.json  SpriteAtlasRadioBomb.json  SpriteAtlasScoreboard.json  SpriteAtlasStage1.json  SpriteAtlasStage2.json  SpriteAtlasStage3.json  SpriteAtlasStage4.json  SpriteAtlasTimeUP.json  SpriteAtlasVocAmarilloPeq.json  SpriteAtlasVocNaranjaGrande.json  SpriteAtlasVocPuntuaciones.json
resources/temporal/: fondo-marco-jardin-verde-copyspace_1308-28021.avif
shaders/: model3D.frag  model3D.vs  model3D_textured.frag  model3D_textured.vs  shadow.frag  sprite.frag  sprite.vs
src/: audio_manager.cpp  bomb.cpp  bomberman.cpp  cinematic_player.cpp  controls_menu.cpp  cpu_bomberman.cpp  custom_game_menu.cpp  custom_game_mode.cpp  destructible_block.cpp  game_map.cpp  gamepad_input.cpp  glb_loader.cpp  in_game_menu.cpp  indestructible_block.cpp  main.cpp  menu.cpp  menu_intro.cpp  player.cpp  q_learning.cpp  resource_manager.cpp  score_popup.cpp  sprite_atlas.cpp  tile_animator.cpp  versus_mode.cpp
src/enemies/: babosa.cpp  bebe_lloron.cpp  dragon_joven.cpp  dron_bombardero.cpp  enemy.cpp  fantasma_mortal.cpp  king_bomber.cpp  leon.cpp  sol_pervertido.cpp
tools/: atlas_preview_sheet.cpp  strip_sheet_alpha.cpp
